# ChangeLog for media-sound/sound-juicer
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/sound-juicer/ChangeLog,v 1.173 2009/12/03 17:25:30 ranger Exp $

  03 Dec 2009; Brent Baude <ranger@gentoo.org> sound-juicer-2.26.1.ebuild:
  Marking sound-juicer-2.26.1 ppc64 stable for bug 281427

  28 Nov 2009; Raúl Porcel <armin76@gentoo.org> sound-juicer-2.26.1.ebuild:
  alpha/ia64/sparc stable wrt #281427

*sound-juicer-2.28.0 (29 Oct 2009)

  29 Oct 2009; Gilles Dartiguelongue <eva@gentoo.org>
  +sound-juicer-2.28.0.ebuild:
  New version for GNOME 2.28.

  24 Oct 2009; nixnut <nixnut@gentoo.org> sound-juicer-2.26.1.ebuild:
  ppc stable #281427

  17 Oct 2009; Markus Meier <maekke@gentoo.org> sound-juicer-2.26.1.ebuild:
  x86 stable, bug #281427

  08 Oct 2009; Olivier Crête <tester@gentoo.org>
  sound-juicer-2.26.1.ebuild:
  Stable on amd64, bug #281427

  17 May 2009; Tobias Klausmann <klausman@gentoo.org>
  sound-juicer-2.26.1.ebuild:
  Keyworded on alpha, bug #268363

  17 May 2009; Raúl Porcel <armin76@gentoo.org> sound-juicer-2.26.1.ebuild:
  Add ~ia64/~sparc wrt #268363

*sound-juicer-2.26.1 (02 May 2009)

  02 May 2009; Gilles Dartiguelongue <eva@gentoo.org>
  -files/sound-juicer-2.22.0-sj-handle-uri.patch,
  -sound-juicer-2.20.1-r1.ebuild, -sound-juicer-2.22.0.ebuild,
  -sound-juicer-2.22.0-r1.ebuild, +sound-juicer-2.26.1.ebuild:
  New version for GNOME 2.26. Migrate to musicbrainz3, brasero, drop
  libgnome, use libcanberra for events. Clean up old revisions.

  27 Apr 2009; Jeroen Roovers <jer@gentoo.org> sound-juicer-2.24.0:
  Stable for HPPA (bug #260063).

  12 Apr 2009; Friedrich Oslage <bluebird@gentoo.org>
  sound-juicer-2.24.0.ebuild:
  Stable on sparc, bug #260063

  18 Mar 2009; Raúl Porcel <armin76@gentoo.org> sound-juicer-2.24.0.ebuild:
  alpha/ia64 stable wrt #260063

  15 Mar 2009; Markus Meier <maekke@gentoo.org> sound-juicer-2.24.0.ebuild:
  x86 stable, bug #260063
