@@ -1,6 +1,12 @@
 # ChangeLog for media-sound/sound-juicer
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/sound-juicer/ChangeLog,v 1.173 2009/12/03 17:25:30 ranger Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/sound-juicer/ChangeLog,v 1.174 2009/12/13 11:05:43 nirbheek Exp $
+
+*sound-juicer-2.26.2 (13 Dec 2009)
+
+  13 Dec 2009; Nirbheek Chauhan <nirbheek@gentoo.org>
+  +sound-juicer-2.26.2.ebuild:
+  Bump to 2.26.2 -- pure bugfix release
 
   03 Dec 2009; Brent Baude <ranger@gentoo.org> sound-juicer-2.26.1.ebuild:
   Marking sound-juicer-2.26.1 ppc64 stable for bug 281427
